--- a/mdemo/Makefile.am
+++ b/mdemo/Makefile.am
@@ -9,7 +9,7 @@ EXTRA_DIST = acinclude.m4
 lib_LTLIBRARIES = libsub.la foo1.la libfoo2.la
 
 foo1_la_SOURCES = foo1.c
-foo1_la_LIBADD = $(LIBM)
+foo1_la_LIBADD = $(LIBM) libsub.la
 foo1_la_LDFLAGS = -module -avoid-version
 
 libfoo2_la_SOURCES = foo2.c
