General cleanup of autoconf-2.50 upgrade: * configure.ac: Mark as needing autoconf-mode in emacs.  Pass arguments to AC_INIT. * cdemo/configure.ac: Ditto. * demo/configure.ac: Ditto. * depdemo/configure.ac: Ditto. * libtldl/configure.ac: Ditto. * mdemo/configure.ac: Ditto. * pdemo/configure.ac: Ditto. * tagdemo/configure.ac: Ditto. * ltdl.m4: Mark as needing autoconf-mode in emacs. * libtool.m4: Mark as needing autoconf-mode in emacs.  Don't add () to AS_MESSAGE_LOG_FD. * libltdl/configure.ac: Use config-h.in as template for config.h. * tagdemo/configure.ac: Drop the AC_DIAGNOSTIC. Move AC_LANG([C++]) after the OBJEXT/EXEEXT check.

--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
-## Process this file with autoconf to create configure.
+## Process this file with autoconf to create configure. -*- autoconf -*-
 
 AC_PREREQ(2.50)
-AC_INIT
+AC_INIT([libtool], [1.4a], [bug-libtool@gnu.org])
 AC_CONFIG_SRCDIR([ltmain.in])
 
 AM_INIT_AUTOMAKE(libtool, 1.4a)
