--- a/mdemo/configure.ac
+++ b/mdemo/configure.ac
@@ -1,7 +1,7 @@
-dnl Process this file with autoconf to create configure.
+dnl Process this file with autoconf to create configure. -*-Autoconf-*-
 
 AC_PREREQ(2.50)
-AC_INIT
+AC_INIT(mdemo, 0.1)
 AC_CONFIG_SRCDIR([main.c])
 AM_INIT_AUTOMAKE(mdemo,0.1)
 
