--- a/tagdemo/configure.ac
+++ b/tagdemo/configure.ac
@@ -1,4 +1,4 @@
-dnl
+dnl -*-Autoconf-*-
 dnl $Id$
 
 dnl
@@ -7,8 +7,9 @@ dnl application.
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-
-AC_INIT
+AC_PREREQ(2.50)
+dnl Can't use $PACKAGE/$VERSION here
+AC_INIT(foo, 0.1)
 AC_CONFIG_SRCDIR([foo.cpp])dnl
 
 dnl Check what platform we are running on.
@@ -18,8 +19,7 @@ dnl Cause GNU Automake to initialize the state of things and run
 dnl some sanity checks
 PACKAGE=foo
 VERSION=0.1
-
-AM_INIT_AUTOMAKE("$PACKAGE", "$VERSION", DUMMY)dnl
+AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
 
 dnl Check the C compiler and preprocessor.
 AC_PROG_CC
@@ -30,9 +30,6 @@ dnl Check the C++ compiler and preprocessor.
 AC_PROG_CXX
 AC_PROG_CXXCPP
 
-dnl Set the test language to C++.
-AC_LANG([C++])
-
 # As of the writing of this demo, GNU Autoconf's AC_OBJEXT and
 # AC_EXEEXT macros only works for C compilers!
 # Libtool's setup macro calls AC_OBJEXT and AC_EXEEXT without setting
@@ -40,15 +37,15 @@ AC_LANG([C++])
 # called so that the proper values are cached beforehand.  We also do
 # it before any linker flags (LDFLAGS) are set so that C++ specific
 # ones don't break the tests.
-AC_DIAGNOSE([obsolete],[instead of using `AC_LANG', `AC_LANG_SAVE',
-and `AC_LANG_RESTORE', you should use `AC_LANG_PUSH' and `AC_LANG_POP'.])
-
 AC_LANG_PUSH([C])
 AC_OBJEXT
 AC_EXEEXT
 AC_LANG_POP
 
 dnl Setup Libtool
+
+dnl Set the test language to C++.
+AC_LANG([C++])
 
 dnl Check for libtool and turn on Automake processing for Libtool
 AM_PROG_LIBTOOL
@@ -58,10 +55,6 @@ AC_CHECK_HEADERS(math.h)
 AC_CHECK_LIBM
 AC_SUBST(LIBM)
 
-AC_CONFIG_FILES([
-  Makefile
- ])
-AC_CONFIG_COMMANDS([default],[[
-  echo "Done configuring package $PACKAGE"
- ]],[[]])
+AC_CONFIG_FILES(Makefile)
+AC_CONFIG_COMMANDS([default], [[echo "Done configuring package $PACKAGE"]])
 AC_OUTPUT
