* configure.ac: Bumped version to 1.4b. * NEWS: updated. * config.guess, config.sub, texinfo.tex:  Synchronised from ftp.gnu.org.

--- a/configure.ac
+++ b/configure.ac
@@ -1,10 +1,10 @@
 ## Process this file with autoconf to create configure. -*- autoconf -*-
 
 AC_PREREQ(2.50)
-AC_INIT([libtool], [1.4a], [bug-libtool@gnu.org])
+AC_INIT([libtool], [1.4b], [bug-libtool@gnu.org])
 AC_CONFIG_SRCDIR([ltmain.in])
 
-AM_INIT_AUTOMAKE(libtool, 1.4a)
+AM_INIT_AUTOMAKE(libtool, 1.4b)
 
 # This is a sanity check so we can see which version is used in bug reports.
 # It is assumed that we only want to see the date extension for cvs libtool
