--- a/Makefile.am
+++ b/Makefile.am
@@ -15,7 +15,7 @@ LIBS= @LIBS@
 aclocal_macros = libtool.m4 ltdl.m4
 
 EXTRA_DIST = $(aclocal_macros) bootstrap libtoolize.in ltmain.in \
-	mkstamp ChangeLog.0
+	mkstamp ChangeLog.0 ChangeLog.1
 CLEANFILES = libtool libtoolize ltmain.shT
 
 # These are required by libtoolize.
