* ltdl.m4: Bump serial number. General reformat and tify up in line with Autoconf-2.50 support. (AC_LTDL_FUNC_ARGZ): Test for system implementations of a handful of argz API calls, the error_t type, and the argz.h header. * libltdl/configure.ac (AM_INIT_AUTOMAKE): Bump version number. * libltdl/ltdl.c (rpl_argz_append, rpl_argz_create_sep. rpl_argz_insert, rpl_rgz_next):  Fallback implementations of the similarly named functions for machines that don;t use glibc. (lt_dlrealloc):  New memory function pointer that can be set by the client.  Defaults to rpl_realloc, which in turn uses only lt_dlmalloc and lt_dlfree. (LT_EMALLOC, LT_EREALLOC): Set internal out-of-memory error inside the functions called by these new macros.  Simplified all callers by removing explicit client error reporting. (memmove):  Fallback implementation of overlap safe memory copy function. (tryall_dlopen):  Factorized common code into... (tryall_dlopen_module): ...this new helper function. (canonicalize_path):  Changed function signature to return success or failure.  Updated all callers. (foreachfile_callback):  Make use of argz API. (LT_DLSTRLEN): Moved from here... * libltdl/ltdl.h (LT_STRLEN): ...to here.  Updated all callers. (lt_dlrealloc):  Declare new memory management handle.

--- a/libltdl/configure.ac
+++ b/libltdl/configure.ac
@@ -23,7 +23,7 @@ if test -z "$enable_ltdl_install$enable_ltdl_convenience"; then
   fi
 fi
 
-AM_INIT_AUTOMAKE(libltdl,1.1,-)
+AM_INIT_AUTOMAKE(libltdl,1.2,-)
 AM_CONFIG_HEADER(config.h:config-h.in)
 AM_MAINTAINER_MODE
 
@@ -32,7 +32,7 @@ AC_C_CONST
 AC_C_INLINE
 
 AC_LIBTOOL_WIN32_DLL
-AM_PROG_LIBTOOL
+AC_PROG_LIBTOOL
 AC_SUBST(LIBTOOL_DEPS)
 
 AC_LIB_LTDL
