ltmain.in [irix*]: $with_gcc is either "yes" or "" (empty string) with current autoconf, so we need to be robust to that when testing it,

--- a/ltmain.in
+++ b/ltmain.in
@@ -1171,7 +1171,7 @@ EOF
       # so, if we see these flags be careful not to treat them like -L
       -L[A-Z][A-Z]*:*)
 	case $with_gcc/$host in
-	no/*-*-irix*)
+	no/*-*-irix* | /*-*-irix*)
 	  compile_command="$compile_command $arg"
 	  finalize_command="$finalize_command $arg"
 	  ;;
