* ltmain.in (exec_cmd): Fix quoting in execute mode so that the double quotes added by libtool (to prevent lossage with embedded spaces in filenames etc.) are not interpreted as literals by the shell.

--- a/ltmain.in
+++ b/ltmain.in
@@ -5095,7 +5095,7 @@ relink_command=\"$relink_command\""
       fi
 
       # Now prepare to actually exec the command.
-      exec_cmd='"$cmd"$args'
+      exec_cmd="\$cmd$args"
     else
       # Display what would be done.
       if test -n "$shlibpath_var"; then
