--- a/configure.in
+++ b/configure.in
@@ -2,7 +2,7 @@
 
 AC_INIT(ltmain.in)
 
-AM_INIT_AUTOMAKE(libtool, 1.4.1)
+AM_INIT_AUTOMAKE(libtool, 1.4.1a)
 
 # This is a sanity check so we can see which version is used in bug reports.
 # It is assumed that we only want to see the date extension for cvs libtool
@@ -21,7 +21,7 @@ case "$VERSION" in
     echo $dashes
     echo
     ;;
-esac    
+esac
 AC_SUBST(TIMESTAMP)
 
 pkgdatadir='${datadir}'"/${PACKAGE}"
