* demo/Makefile.am (helldl):  Automake 1.4 can't find the target if we use helldl$(EXEEXT), and Automake 1.5 barfs unless we do. Using both targets to the left of the colon seems to work though!

--- a/demo/Makefile.am
+++ b/demo/Makefile.am
@@ -15,7 +15,7 @@ include_HEADERS = foo.h
 if BINARY_HELLDL
 BUILD_helldl = helldl
 else
-BUILD_helldl = 
+BUILD_helldl =
 endif
 
 bin_PROGRAMS = hell hell.static $(BUILD_helldl)
@@ -40,7 +40,7 @@ else
 
 bin_SCRIPTS = helldl
 # create a script that says that -dlopen is not supported
-helldl:
+helldl helldl$(EXEEXT):
 	rm -f $@
 	echo '#! /bin/sh' > $@
 	echo '-dlopen is unsupported' >> $@
