* ltmain.in (-lc_r): Style improvement.

--- a/ltmain.in
+++ b/ltmain.in
@@ -1045,8 +1045,7 @@ compiler."
 	    test "X$arg" = "X-lc" && continue
 	    ;;
 	  esac
-	 fi
-	 if test "X$arg" = "X-lc_r"; then
+	 elif test "X$arg" = "X-lc_r"; then
 	  case $host in
 	  *-*-openbsd*)
 	    # Do not include libc_r directly, use -pthread flag.
