--- a/libltdl/configure.in
+++ b/libltdl/configure.in
@@ -22,7 +22,7 @@ if test -z "$enable_ltdl_install$enable_ltdl_convenience"; then
 fi
 
 AM_INIT_AUTOMAKE(libltdl,1.2,-)
-AM_CONFIG_HEADER(config.h)
+AM_CONFIG_HEADER(config.h:config-h.in)
 AM_MAINTAINER_MODE
 
 AC_PROG_CC
