--- a/ltmain.in
+++ b/ltmain.in
@@ -506,7 +506,7 @@ if test -z "$show_help"; then
 	  if grep "^# ### BEGIN LIBTOOL TAG CONFIG: $z$" < "$0" > /dev/null; then
 	    # Evaluate the configuration.
 	    eval "`sed -n -e '/^# ### BEGIN LIBTOOL TAG CONFIG: '$z'$/,/^# ### END LIBTOOL TAG CONFIG: '$z'$/p' < $0`"
-	    case $base_compile in
+	    case "$base_compile " in
 	    "$CC "*)
 	      # The compiler in the base compile command matches
 	      # the one in the tagged configuration.
