--- a/mdemo/configure.ac
+++ b/mdemo/configure.ac
@@ -1,17 +1,50 @@
-dnl Process this file with autoconf to create configure. -*-Autoconf-*-
+## Process this file with autoconf to create configure. -*- autoconf -*-
+# Copyright 2001  Free Software Foundation, Inc.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
+# 02111-1307  USA
 
 AC_PREREQ(2.50)
-AC_INIT(mdemo, 0.1)
-AC_CONFIG_SRCDIR([main.c])
-AM_INIT_AUTOMAKE(mdemo,0.1)
 
+
+## ------------------------ ##
+## Autoconf initialisation. ##
+## ------------------------ ##
+AC_INIT([mdemo], [0.1], [bug-libtool@gnu.org])
+AC_CONFIG_SRCDIR([main.c])
+
+
+## ------------------------ ##
+## Automake Initialisation. ##
+## ------------------------ ##
+AM_INIT_AUTOMAKE(AC_PACKAGE_TARNAME, AC_PACKAGE_VERSION)
+
+
+## ------------------ ##
+## C compiler checks. ##
+## ------------------ ##
 AC_PROG_CC
 AC_C_CONST
-AC_EXEEXT
 
-AC_LIBLTDL_CONVENIENCE(../libltdl)
-AC_SUBST(INCLTDL)
-AC_SUBST(LIBLTDL)
+
+## ----------------------- ##
+## Libtool initialisation. ##
+## ----------------------- ##
+AC_LIBLTDL_CONVENIENCE([../libltdl])
+AC_SUBST([INCLTDL])
+AC_SUBST([LIBLTDL])
 
 AC_LIBTOOL_WIN32_DLL
 AC_LIBTOOL_DLOPEN
@@ -23,13 +56,24 @@ if ${CONFIG_SHELL} ./libtool --features | grep "enable static" >/dev/null; then
 else
   STATIC=
 fi
-AC_SUBST(STATIC)
+AC_SUBST([STATIC])
 
-AC_CHECK_HEADERS(math.h)
 
+## ---------------------------- ##
+## C headers required by mdemo. ##
+## ---------------------------- ##
+AC_CHECK_HEADERS([math.h])
+
+
+## ---------------------------- ##
+## Libraries required by cdemo. ##
+## ---------------------------- ##
 AC_CHECK_LIBM
-AC_SUBST(LIBM)
+AC_SUBST([LIBM])
 
-dnl Output the makefile
+
+## -------- ##
+## Outputs. ##
+## -------- ##
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
